[package]
name = "ns_zday_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
educe = "*"
lazy_static ="*"
petgraph = "*"
csv = { git = "https://github.com/gootorov/rust-csv.git", rev = "31d1105f9ee50bf02dff178f20be4a1ec9fdff2d" }
derive_more = "*"
[dependencies.serde]
version ="*"
features = ["derive"]
[dependencies.quick-xml]
version = "*"
features = ["serialize"]